src/objects/VisionCareSalesCommission__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Status__c</fullName>
        <label>Commission Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IRS_Partner_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IRS Partner Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Commission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agency_ID__c</columns>
        <columns>IRS_Partner_Type__c</columns>
        <columns>Commission_Status__c</columns>
        <columns>Address_Line_1__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>Tax_ID__c</columns>
        <columns>Legal_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Commission</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>